AUTOMAKE_OPTIONS = foreign
SUBDIRS = drivers include libmikmod loaders mmio playercode \
          docs macintosh posix os2 win32

bin_SCRIPTS = libmikmod-config

EXTRA_DIST = libmikmod-3.1.9.lsm libmikmod-config.in libmikmod.m4 \
             PROBLEMS COPYING.LESSER

m4datadir = $(datadir)/aclocal
m4data_DATA = libmikmod.m4
