
noinst_LTLIBRARIES = libmikmod.la

libmikmod_la_SOURCES =		\
	drv_nos.c		\
	drv_sdl.c		\
load_669.c  load_far.c	load_it.c   load_mod.c	load_s3m.c  load_ult.c \
load_amf.c  load_gdm.c	load_m15.c  load_mtm.c	load_uni.c \
load_dsm.c  load_imf.c	load_med.c  load_okt.c	load_xm.c  \
	mdreg.c			\
	mdriver.c		\
	mikmod.h		\
	mikmod_build.h		\
	mikmod_internals.h	\
	mloader.c		\
	mlreg.c			\
	mlutil.c		\
	mmalloc.c		\
	mmerror.c		\
	mmio.c			\
	mplayer.c		\
	munitrk.c		\
	mwav.c			\
	npertab.c		\
	sloader.c		\
	virtch.c		\
	virtch2.c		\
	virtch_common.c

EXTRA_DIST = AUTHORS COPYING.LESSER README
